@@ -3,6 +3,7 @@
         * Version 1.3.0 released
         =========================
 
+        GWcs now supports CD keywords instead of CDELT (#1951)
         Add GLS and SFL WCS projections (#1851)
 
 
